--- a/client/src/index.css
+++ b/client/src/index.css
@@ -8,7 +8,10 @@ body {
     "Droid Sans", "Helvetica Neue", sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  background-color: rgb(143, 143, 179);
+
+
+  background: rgba(246, 103, 79, 1);
+  background: radial-gradient(at center, rgba(246, 103, 79, 1), rgba(85, 135, 181, 1));
 }
 
 code {
